[package]
name = "cts6-emulator"
version = "0.1.0"
edition = "2021"
description = "Stand-alone CTS6 swim-timer emulator for chronaris-mm. TCP-only, in-memory."
publish = false

[[bin]]
name = "cts6-emulator"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
chrono = "0.4"
# Audio playback for the wall-touch beep. `wav` is the only decoder
# we need; disabling defaults skips mp3/symphonia and their heavy
# transitive deps.
rodio = { version = "0.17", default-features = false, features = ["wav"] }
